--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: xxx
-description: xxx
+title: Transporters with Visual Foresight
+description: Transporters with Visual Foresight for Solving Unseen Rearrangement Tasks
